--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
     <section class="interactive">
       <div>
-        <img class="image-interactive" src="/images/desktop/image-interactive.jpg" alt="">
+        <img class="image-interactive" src="image-interactive.jpg" alt="">
       </div>
       <div class="interactive-text">
         <h2 class="interactive-leader">The leader in interactive VR</h2>  
@@ -66,43 +66,43 @@
           <h2 class="creations">Our creations</h2>
         </div>
         <picture class="grid-item">
-          <source media="(max-width: 767px) " srcset="/images/mobile/image-deep-earth.jpg">
-          <img class="grid-photo" src="/images/desktop/image-deep-earth.jpg" alt="image-deep-earth">
+          <source media="(max-width: 767px) " srcset="image-deep-earth.jpg">
+          <img class="grid-photo" src="image-deep-earth.jpg" alt="image-deep-earth">
           <h3 class="photo-name">Deep <br> earth</h3>
         </picture>
         <picture class="grid-item">
-          <source media="(max-width: 767px) " srcset="/images/mobile/image-night-arcade.jpg">
-         <img class="grid-photo" src="/images/desktop/image-night-arcade.jpg" alt="image-night-arcade">
+          <source media="(max-width: 767px) " srcset="image-night-arcade.jpg">
+         <img class="grid-photo" src="image-night-arcade.jpg" alt="image-night-arcade">
           <h3 class="photo-name">Night arcade</h3>
         </picture>
         <picture class="grid-item">
-          <source media="(max-width: 767px) " srcset="/images/mobile/image-soccer-team.jpg">
-         <img class="grid-photo" src="/images/desktop/image-soccer-team.jpg" alt="image-soccer-team">
+          <source media="(max-width: 767px) " srcset="image-soccer-team.jpg">
+         <img class="grid-photo" src="image-soccer-team.jpg" alt="image-soccer-team">
           <h3 class="photo-name">Soccer team VR</h3>
         </picture>
         <picture class="grid-item">
-          <source media="(max-width: 767px) " srcset="/images/mobile/image-grid.jpg">
-         <img class="grid-photo" src="/images/desktop/image-grid.jpg" alt="image-grid">
+          <source media="(max-width: 767px) " srcset="image-grid.jpg">
+         <img class="grid-photo" src="image-grid.jpg" alt="image-grid">
           <h3 class="photo-name">The <br> grid</h3>
         </picture>
         <picture class="grid-item">
-          <source media="(max-width: 767px) " srcset="/images/mobile/image-from-above.jpg">
-         <img class="grid-photo" src="/images/desktop/image-from-above.jpg" alt="image-from-above">
+          <source media="(max-width: 767px) " srcset="image-from-above.jpg">
+         <img class="grid-photo" src="image-from-above.jpg" alt="image-from-above">
           <h3 class="photo-name">From up above VR</h3>
         </picture>
         <picture class="grid-item">
-          <source media="(max-width: 767px) " srcset="/images/mobile/image-pocket-borealis.jpg">
-         <img class="grid-photo" src="/images/desktop/image-pocket-borealis.jpg" alt="image-pocket-borealis">
+          <source media="(max-width: 767px) " srcset="image-pocket-borealis.jpg">
+         <img class="grid-photo" src="image-pocket-borealis.jpg" alt="image-pocket-borealis">
           <h3 class="photo-name">Pocket borealis</h3>
         </picture>
         <picture class="grid-item">
-          <source media="(max-width: 767px) " srcset="/images/mobile/image-curiosity.jpg">
-         <img class="grid-photo" src="/images/desktop/image-curiosity.jpg" alt="image-curiosity" >
+          <source media="(max-width: 767px) " srcset="image-curiosity.jpg">
+         <img class="grid-photo" src="image-curiosity.jpg" alt="image-curiosity" >
           <h3 class="photo-name">The curiosity</h3>
         </picture>
         <picture class="grid-item">
-          <source media="(max-width: 767px) " srcset="/images/mobile/image-fisheye.jpg">
-         <img class="grid-photo" src="/images/desktop/image-fisheye.jpg" alt="image-fisheye">
+          <source media="(max-width: 767px) " srcset="image-fisheye.jpg">
+         <img class="grid-photo" src="image-fisheye.jpg" alt="image-fisheye">
           <h3 class="photo-name">Make it fisheye</h3>
         </picture>
         <div class="mobile-bottom">
